Bug 1224761 - Fix forceRepeatToCoverTiles optimization to not trigger when all stops at left edge of tile.  r=roc

I tested locally in the reftest harness that the reftest fails as
expected (the second box shows a gradient) without the patch, and passes
with the patch.

(The reftest test is dholbert's testcase from the bug, unmodified; I
wrote the reference.)